@@ -1,19 +1,19 @@
-fc0d083599fbf36200e171cae5daa4b5 *DESCRIPTION
+1a36cb23f83f503d54051b9b1cff53b6 *DESCRIPTION
 85683e302fbf9f04559d43f1c91b596f *NAMESPACE
-e370faafe8ca6f722c9a9eddc658f3e7 *R/generics.R
+bdb8c8938ca0d2a0e59018562be0dd7a *R/generics.R
 df2bb273b2f5c3b12881b3e28d6f7c27 *R/hooks.R
-781c0aa888fe5d4bd8376fc3cc990342 *R/lme4_functions.R
-679f1efcc870b533e40e7c6a37f6e201 *R/misc.R
+2ca87bd6bb2088b761f75566ef0dfce4 *R/lme4_functions.R
+88d755790e5037e6d8f5169718ca56e1 *R/misc.R
 c7416e0cd6a3dbae3e0daa1855f20602 *R/priors.R
 d73199c2e5f9071ede1771ee80f19b7e *R/rstanarm_functions.R
-ba04cb66307dbeadfab11f331a2e34b7 *R/stan4bart.R
+42511522a055e21539a561584c86a24c *R/stan4bart.R
 79b6b027a3b342b70d3df45e9e502e9b *R/stan4bart_fit.R
-26d99ce54eb86f009591219222031bf9 *R/test_data.R
+726b8042d9490cdccfe21171d496b04c *R/test_data.R
 e78c9b154a5897a9ac2b9015c0606e79 *cleanup
 14d41058f7bf05db8de5f25f8f69385b *configure
 9af930d9316e3d908f1830c13872006c *configure.ac
 26f75e2670c755acaa359daa02e91003 *configure.win
-3ff60d748c988bf6f94b76f37cea8752 *inst/NEWS.Rd
+71728542a9517277cf858a5b3ef5e4ba *inst/NEWS.Rd
 626520e58e6b0b87c8be8caf3632bc76 *inst/common/friedmanData.R
 235b04f35b20901aa46622f23e880f83 *man/generics.Rd
 d57e56808563ee726b8ae453fadacfe2 *man/stan4bart.Rd
@@ -35,7 +35,7 @@ d07dfb8dd58f797d25a5f926f46916a2 *src/include/misc/stddef.h
 c8e04ccce1af5b350b27a02add19ebab *src/include/misc/string.h
 b8d9c47a1249c35bee75832cd4aa4a17 *src/include/rc/bounds.h
 762d9bb4352819e799c2c87d89ee583d *src/include/rc/util.h
-85631956f6d4332aca7f776915ac5d48 *src/include/rstan/io/r_ostream.hpp
+072ccab589d5eedba967d45d2f639744 *src/include/rstan/io/r_ostream.hpp
 207f5b117be93aad28c00c767baf5577 *src/include/stan/analyze/mcmc/autocovariance.hpp
 c5794ebbab8013e0c4b42506f89b83fe *src/include/stan/analyze/mcmc/compute_effective_sample_size.hpp
 e329d56fd9f37adbcca7812b87dc96e7 *src/include/stan/analyze/mcmc/compute_potential_scale_reduction.hpp
@@ -2163,7 +2163,7 @@ cbfe0a2dee4d38517769933b3901c418 *src/include/sundials/sunmemory/sunmemory_sycl.
 4b24e5c668ae7f65c4e552302930d4e3 *src/include/sundials/sunnonlinsol/sunnonlinsol_fixedpoint.h
 4faccf6b4fd22be8435271d7f9bac24c *src/include/sundials/sunnonlinsol/sunnonlinsol_newton.h
 cf12e0797e2e7cf945e54a42163660c9 *src/include/sundials/sunnonlinsol/sunnonlinsol_petscsnes.h
-1bd02ca340ea81bed467542250bf7aa3 *src/init.cpp
+4a38d56ec89a7c84b44ae707ff4e3a2a *src/init.cpp
 dc86e90a5ce0daefa818f73280ec355e *src/interruptable_sampler.hpp
 b3867b83f8828348ea583694b8b5bbd3 *src/misc_adaptiveRadixTree.c
 bf904b3f3a14913c66d78ed5cd46772c *src/misc_string.c
@@ -2172,11 +2172,11 @@ bf904b3f3a14913c66d78ed5cd46772c *src/misc_string.c
 f92638bf318c25e8b07cee86e7ea98f2 *src/stan_files/continuous.hpp
 0d1440ceadd466a2f426910972d498ed *src/stan_files/continuous.stan
 cad712555e26c22b5dfb8f62d78cc971 *src/stan_files/continuous_new.hpp
-d7b42b4817b04109fe14cf58ed9bfbbe *src/stan_sampler.cpp
+c8ed7ed655db195e343bb24ad781cad1 *src/stan_sampler.cpp
 3ee98a9017fd2a16426ff1524cb607a9 *src/stan_sampler.hpp
 ea9cf25c37a4d22d1b3bc0cde01b1ac9 *src/stan_sampler_includes.hpp
 2510243951f8b25e260a63d8dbe69a1c *tests/testthat.R
-fa46603425b3016635e7a72c9d60639f *tests/testthat/test-01-continuous.R
+713522a45e226167197e06cbcfdd103b *tests/testthat/test-01-continuous.R
 cde03414df7c9a985f5a155dcd231e1d *tests/testthat/test-02-binary.R
 87b3fb5e5ec1c1aa0a554dd882dba801 *tests/testthat/test-03-na_action.R
 135d9fcfd108ed1ca3489ab5e6449fe6 *tests/testthat/test-04-factor_levels.R
