@@ -1,6 +1,16 @@
 \name{NEWS}
 \title{stan4bart News}
 \encoding{UTF-8}
+\section{CHANGES IN VERSION 0.0-7}{
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item \code{extract} argument now works correctly with varcount. Bug
+            report thanks to Joshua Bon.
+      \item \code{predict} now works with single chains. Bug report thanks to
+            github user Pentaonia (Louis).
+    }
+  }
+}
 \section{CHANGES IN VERSION 0.0-4}{
   \subsection{NEW FEATURES}{
     \itemize{
